--- a/less/main.less
+++ b/less/main.less
@@ -1,23 +1,46 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
+@QHblue: #0071BC;
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  width: 320px;
-  margin: 20px auto;
-  color: #0071BC;
+  color: @QHblue;
   font-family: Roboto, 'Open Sans', Arial, sans-serif;
   line-height: 1.5em;
   letter-spacing: 0.3px;
-  font-size: 14px;
+  font-size: 18px;
+}
+
+h1 {
+  background: @QHblue;
+  color: #fff;
+  padding: 20px;
+  line-height: 1.5em;
+  font-size: 26px;
+}
+
+.page_content {
+  padding: 0 30px;
+  width: 480px;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 .messaging {
+  padding: 20px 30px;
   .error {
     color: #f00;
+  }
+}
+
+.questions {
+  display: none;
+  &.show {
+    display: block;
   }
 }
 
@@ -34,25 +57,27 @@ body {
 .submit {
   width: 150px;
   padding: 10px;
-  background: #0071BC;
+  background: @QHblue;
   color: #fff;
   border: none;
   outline: 0;
   border-radius: 5px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: 16px;
-  margin: 0 auto;
+  font-size: 18px;
+  margin: 40px auto;
   display: block;
+  cursor: pointer;
 }
 
 .doctors {
   text-align: center;
 }
 .doctor {
-  background: #0071BC;
+  background: @QHblue;
   color: #fff;
   padding: 20px;
   width: 200px;
   margin: 10px auto;
+  cursor: pointer;
 }
